--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
     <!-- 顶部视频展示区 -->
     <section class="hero-section">
         <video id="heroVideo" class="hero-video" autoplay muted loop playsinline preload="auto">
-            <source src="images/Runway Tools for human imagination .mp4" type="video/mp4">
+            <source src="images/Kling AI Next-Generation AI Creative Studio .mp4" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
